Closed Bug 214049 Opened 23 years ago Closed 23 years ago

null domwindow [@ nsAccessibilityService::OnStateChange]

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 98
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

Reported on w98, wME, and wXP. 163 aWebProgress->GetDOMWindow(getter_AddRefs(domWindow)); 164 NS_ASSERTION(domWindow, "No dom window for nsIWebProgress::OnStateChange"); 165 166 nsCOMPtr<nsIDOMDocument> domDoc; 167 domWindow->GetDocument(getter_AddRefs(domDoc)); Stack Trace: nsAccessibilityService::OnStateChange [c:/builds/seamonkey/mozilla/accessible/src/base/nsAccessibilityService.cpp line 168] nsDocLoaderImpl::FireOnStateChange [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1214] nsDocLoaderImpl::FireOnStateChange [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1239] nsDocLoaderImpl::OnProgress [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1049] nsHttpChannel::OnTransportStatus [c:/builds/seamonkey/mozilla/netwerk/protocol/http/src/nsHttpChannel.cpp line 3345] nsHttpTransaction::TransportStatus_Handler [c:/builds/seamonkey/mozilla/netwerk/protocol/http/src/nsHttpTransaction.cpp line 900] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 672] nsEventQueueImpl::ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/nsEventQueue.cpp line 391] SHELL32.dll + 0x520c24 (0x778b0c24) Source File : c:/builds/seamonkey/mozilla/accessible/src/base/nsAccessibilityService.cpp line no: 168 Build: 2003071814 CrashDate: 2003-07-25 UptimeMinutes: 92 Total: 94 OS: Windows NT 5.1 build 2600 URL: Comment: BBID: 22183740
Attachment #128619 - Flags: superreview?(bzbarsky)
Attachment #128619 - Flags: review?(aaronl)
Attachment #128619 - Flags: superreview?(bzbarsky) → superreview+
Comment on attachment 128619 [details] [diff] [review] Don't crash if there's no dom window r=aaronl
Attachment #128619 - Flags: review?(aaronl) → review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsAccessibilityService::OnStateChange]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: