Bug 214049 null domwindow [@ nsAccessibilityService::OnStateChange] r=aaronl sr=bz